grafana/grafana-service.yml
apiVersion: v1
kind: Namespace
metadata:
    name: monitoring
---
apiVersion: v1
kind: Service
metadata:
    name: grafana
    namespace: monitoring
spec:
    selector:
        name: grafana
        app: grafana
    ports:
        - port: 3000
          protocol: TCP
          targetPort: 3000
    type: NodePort
