grafana/ingress-grafana.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-grafana
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
